feat: Complete Erix Clean Hub with Welcome page, AI image generation, schedule management, services page, and cleaned up testing files
- Added comprehensive welcome page as main hub for all services
- Fixed AIImageService constructor with proper API key validation
- Cleaned up all testing/temporary files (generate-*.js, temp files)
- Complete business platform with 6 functional pages
- Ready for production deployment

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 PORT=3000
 NODE_ENV=development
 
+# OpenAI Configuration for AI Image Generation
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your-openai-api-key-here
+
 # Email Service Configuration (for notifications)
 # Choose ONE of the following options:
 
@@ -15,6 +19,11 @@ NODE_ENV=development
 # EMAIL_USER=karcher.monitor.yourname@gmail.com
 # EMAIL_PASS=your_16_character_app_password
 
+EMAIL_SERVICE=yahoo
+EMAIL_USER=notifyingserver@yahoo.com
+EMAIL_PASS=asffas123!#@$
+PORT=3000
+NODE_ENV=production
 # Option 3: Yahoo Mail (requires app password)
 # EMAIL_SERVICE=yahoo
 # EMAIL_USER=karcher.monitor.yourname@yahoo.com
