--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "openai": "^5.10.2",
+    "smtp-server": "^3.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
