deploy: Add comprehensive deployment guide and scripts for Erix Clean Hub
- Created DEPLOYMENT_READY.md with multiple deployment options
- Added deploy-erix-clean.sh script for quick server deployment
- Updated .env.example with production-ready configuration
- Improved upload exclusion list for cleaner deployments
- Ready for DigitalOcean, Vercel, Railway, or Render deployment

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,38 @@
+# Production Environment Configuration for Erix Clean Hub
+# Copy this file to .env and configure with your actual values
+
 # Server Configuration
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
 # OpenAI Configuration for AI Image Generation
 # Get your API key from: https://platform.openai.com/api-keys
+# REQUIRED for AI image generation features
 OPENAI_API_KEY=your-openai-api-key-here
 
-# Email Service Configuration (for notifications)
+# Cleaning Service Configuration
+COMPANY_NAME=Erix Clean
+COMPANY_PHONE=+995 555 123 456
+COMPANY_EMAIL=info@erixclean.ge
+COMPANY_ADDRESS=Tbilisi, Georgia
+
+# Monitoring Configuration
+CHECK_INTERVAL_MINUTES=5
+MAX_RETRIES=3
+REQUEST_TIMEOUT=10000
+
+# Security Configuration
+SESSION_SECRET=your-session-secret-here
+CORS_ORIGIN=*
+
+# AI Image Generation Settings
+AI_IMAGES_MAX_SIZE=1024x1024
+AI_IMAGES_QUALITY=standard
+AI_IMAGES_STYLE=natural
+
+# Email Service Configuration (currently disabled - console only)
+# All notifications will be displayed in the console only
+# No email, SMTP, or external services required
 # Choose ONE of the following options:
 
 # Option 1: Outlook/Hotmail (Easiest - no app passwords needed)
