--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cron": "^4.3.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.5",
